2009-10-30  Ben Murdoch  <benm@google.com>

Reviewed by David Kilzer.

        openDatabase() with empty version sets db version up incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=28417

        * storage/open-database-set-empty-version-expected.txt: Added.
        * storage/open-database-set-empty-version.html: Added.
2009-10-30  Ben Murdoch  <benm@google.com>

        Reviewed by David Kilzer.

        openDatabase() with empty version sets db version up incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=28417

        Test: storage/open-database-set-empty-version.html

        * storage/Database.cpp:
        (WebCore::Database::performOpenAndVerify): Raise an exception if the current database version does not match the expected version when the current version is the empty string.

Canonical link: https://commits.webkit.org/41792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50350 268f45cc-cd09-0410-ab3c-d52691b4dbfc